# automation_suite

./: .env.example  .gitignore  ACCESO_ADMIN.md  Gimp.py  PORTS_ARCHITECTURE.md  README.md  TEST_REPORT.md  start_system.sh  test_connection.py
apps/app_carta_manifestacion/: README.md  register_app.py  requirements.txt  run_local.sh  seed_app.sql
apps/app_carta_manifestacion/.streamlit/: config.toml
apps/app_carta_manifestacion/app/: services.py  ui.py
apps/app_carta_manifestacion/app/domain/: __init__.py  constants.py  date_utils.py  document_processor.py  file_parsers.py
backend/: admin_cli.py  alembic.ini  requirements.txt  run_local.sh
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep
backend/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
backend/app/auth/: oidc_stub.py  session.py
backend/app/routers/: apps.py  auth.py  schedules.py  stats.py  telemetry.py
backend/app/services/: app_service.py  auth_service.py
backend/app/utils/: cache.py
backend/tests/: conftest.py  test_apps.py  test_health.py  test_telemetry.py
core/: pyproject.toml
core/core/: __init__.py  settings.py
portal/: apps_registry.yaml  requirements.txt  run_local.sh
portal/app/: admin_pages.py  client.py  portal.py
